--- a/Extensions 2024-03-02.html
+++ b/Extensions 2024-03-02.html
@@ -97,6 +97,7 @@
             <li><a href="https://chrome.google.com/webstore/detail/chphlpgkkbolifaimnlloiipkdnihall" target="_blank" title="Сэкономьте до 95% памяти и наведите порядок во вкладках">OneTab</a></li>
             <li><a href="https://chrome.google.com/webstore/detail/dkaagdgjmgdmbnecmcefdhjekcoceebi" target="_blank" title="Это расширение помогает Вам разрабатывать сайт с попиксельной точностью (pixel perfect)!">PerfectPixel by WellDoneCode (pixel perfect)</a></li>
             <li><a href="https://chrome.google.com/webstore/detail/hkgfoiooedgoejojocmhlaklaeopbecg" target="_blank" title="Watch video using Picture-in-Picture">Picture-in-Picture Extension (by Google)</a></li>
+	    <li><a href="https://chrome.google.com/webstore/detail/ibppednjgooiepmkgdcoppnmbhmieefh" target="_blank" title="Translate while you read and write with Quick Translate. All-in-one translator for web pages. Translate in 103 languages">Quick Translate - Translator, Dictionary</a></li>
             <li><a href="https://chrome.google.com/webstore/detail/fmkadmapgofadopljbjfkapdkoienihi" target="_blank" title="Adds React debugging tools to the Chrome Developer Tools.
 
 Created from revision 993c4d003 on 12/5/2023.">React Developer Tools</a></li>
